--- a/templates/lista.html
+++ b/templates/lista.html
@@ -4,9 +4,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Segurança Digital</title>
+    <link rel="shortcut icon" href="/static/favicon.ico">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel='stylesheet' href='https://use.fontawesome.com/releases/v6.5.1/css/all.css'>
-    <link rel='stylesheet' href='static/style.css'>
+    <link rel='stylesheet' href='/static/style.css'>
   </head>
 
 <body class="p-3 bg-dark text-custom">
@@ -49,6 +50,8 @@
       <div id="progressBar" class="progress-bar progress-bar-custom" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
     </div>
   </div>
+    <input type="hidden" id="categoria" value="{{ categoria }}">
+
   {% for seq, (key, value) in data.items() %}
     <form>
       <div class="row align-items-center ">
@@ -79,6 +82,5 @@
   </div>
 </body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script src="static/script.js"></script>
-
+    <script src="/static/script.js"></script>
 </html>
