--- a/static/style.css
+++ b/static/style.css
@@ -6,8 +6,10 @@ background-color: #16191D;
 color: #A6ADBA;
 }
 
+
+
 /* Estilização dos checkboxes com a classe custom-checkbox */
-input.custom-checkbox[type="checkbox"] {
+input.custom-checkbox-green[type="checkbox"] {
     appearance: none;
     -webkit-appearance: none;
     -moz-appearance: none;
@@ -23,30 +25,118 @@ input.custom-checkbox[type="checkbox"] {
 }
 
 /* Efeito de hover */
-input.custom-checkbox[type="checkbox"]:hover {
+input.custom-checkbox-green[type="checkbox"]:hover {
     border-color: #198754;
 }
 
 /* Estilização quando o checkbox é marcado */
-input.custom-checkbox[type="checkbox"]:checked {
+input.custom-checkbox-green[type="checkbox"]:checked {
     background-color: #198754;
     border-color: #198754;
 }
 
 /* Adiciona um ícone de marcação (checkmark) quando o checkbox é marcado */
-input.custom-checkbox[type="checkbox"]:checked::after {
+input.custom-checkbox-green[type="checkbox"]:checked::after {
+    content: "\2713"; /* Caractere Unicode para o checkmark */
+    color: black;
+    font-size: 18px;
+}
+
+input.custom-switch-green[type="checkbox"]:hover {
+    border-color: #198754;
+}
+input.custom-switch-green[type="checkbox"]:checked {
+    background-color: #198754;
+    border-color: #198754;
+}
+
+
+
+
+/* Estilização dos checkboxes com a classe custom-checkbox */
+input.custom-checkbox-yellow[type="checkbox"] {
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    width: 24px;
+    height: 24px;
+    background-color: white;
+    border-radius: 5px;
+    border: 2px solid #ccc;
+    transition: all 0.3s ease;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+/* Efeito de hover */
+input.custom-checkbox-yellow[type="checkbox"]:hover {
+    border-color: #FFC107;
+}
+
+/* Estilização quando o checkbox é marcado */
+input.custom-checkbox-yellow[type="checkbox"]:checked {
+    background-color: #FFC107;
+    border-color: #FFC107;
+}
+
+/* Adiciona um ícone de marcação (checkmark) quando o checkbox é marcado */
+input.custom-checkbox-yellow[type="checkbox"]:checked::after {
+    content: "\2713"; /* Caractere Unicode para o checkmark */
+    color: black;
+    font-size: 18px;
+}
+
+input.custom-switch-yellow[type="checkbox"]:hover {
+    border-color: #FFC107;
+}
+input.custom-switch-yellow[type="checkbox"]:checked {
+    background-color: #FFC107;
+    border-color: #FFC107;
+}
+
+
+
+
+/* Estilização dos checkboxes com a classe custom-checkbox */
+input.custom-checkbox-red[type="checkbox"] {
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    width: 24px;
+    height: 24px;
+    background-color: white;
+    border-radius: 5px;
+    border: 2px solid #ccc;
+    transition: all 0.3s ease;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+/* Efeito de hover */
+input.custom-checkbox-red[type="checkbox"]:hover {
+    border-color: #DC3545;
+}
+
+/* Estilização quando o checkbox é marcado */
+input.custom-checkbox-red[type="checkbox"]:checked {
+    background-color: #DC3545;
+    border-color: #DC3545;
+}
+
+/* Adiciona um ícone de marcação (checkmark) quando o checkbox é marcado */
+input.custom-checkbox-red[type="checkbox"]:checked::after {
     content: "\2713"; /* Caractere Unicode para o checkmark */
     color: black;
     font-size: 18px;
 }
 
 
-
-
-input.custom-switch[type="checkbox"]:hover {
-    border-color: #198754;
+input.custom-switch-red[type="checkbox"]:hover {
+    border-color: #DC3545;
 }
-input.custom-switch[type="checkbox"]:checked {
-    background-color: #198754;
-    border-color: #198754;
+input.custom-switch-red[type="checkbox"]:checked {
+    background-color: #DC3545;
+    border-color: #DC3545;
 }
