--- a/templates/lista.html
+++ b/templates/lista.html
@@ -12,7 +12,7 @@
 
 <body class="p-3 bg-dark text-custom">
   <nav class="navbar navbar-expand-lg navbar-dark mb-5 fs-5">
-   <a class="navbar-brand text-custom fs-2" href="#"><i class="fa-solid fa-shield-halved"></i> Segurança Digital</a>
+   <a class="navbar-brand text-custom fs-2" href="/"><i class="fa-solid fa-shield-halved"></i> Segurança Digital</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -22,11 +22,20 @@
         </ul>
         <ul class="navbar-nav">
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="fa-solid fa-clipboard-list"></i> Listas</a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="fa-solid fa-clipboard-list"></i> Checklists</a>
+            <ul class="dropdown-menu bg-custom" aria-labelledby="navbarDropdownMenuLink">
+              <li><a class="dropdown-item" href="/lista/autenticacao" style="color: #FACC15"><i class="fas fa-key"></i> Autenticação</a></li>
+              <li><a class="dropdown-item" href="/lista/navegacao" style="color: #34D399"><i class="fas fa-globe"></i> Navegação</a></li>
+              <li><a class="dropdown-item" href="/lista/email" style="color: #2DD4BF"><i class="fas fa-envelope"></i> Email</a></li>
+              <li><a class="dropdown-item" href="/lista/mensagem" style="color: #22D3EE"><i class="fas fa-comments"></i> Mensagem</a></li>
+              <li><a class="dropdown-item" href="/lista/midia_social" style="color: #60A5FA"><i class="fas fa-share-alt"></i> Rede Social</a></li>
+              <li><a class="dropdown-item" href="/lista/redes" style="color: #A78BFA"><i class="fas fa-network-wired"></i> Redes</a></li>
+              <li><a class="dropdown-item" href="/lista/dispositivos_moveis" style="color: #E879F9"><i class="fas fa-mobile-alt"></i> Dispositivos Móveis</a></li>
+              <li><a class="dropdown-item" href="/lista/computador" style="color: #F472B6"><i class="fas fa-mouse"></i> Computador</a></li>
+              <li><a class="dropdown-item" href="/lista/casa_inteligente" style="color: #F87171"><i class="fas fa-laptop-house"></i> Casa Inteligente</a></li>
+              <li><a class="dropdown-item" href="/lista/financas_pessoais" style="color: #C084FC"><i class="fas fa-credit-card"></i> Finanças Pessoais</a></li>
+              <li><a class="dropdown-item" href="/lista/aspecto_humano" style="color: #818CF8"><i class="fas fa-user-alt"></i> Aspecto Humano</a></li>
+              <li><a class="dropdown-item" href="/lista/seguranca_fisica" style="color: #A3E635"><i class="fas fa-building"></i> Segurança Física</a></li>
             </ul>
           </li>
           <li class="nav-item">
