--- a/templates/lista.html
+++ b/templates/lista.html
@@ -41,6 +41,9 @@
           <li class="nav-item">
             <a class="nav-link" aria-current="page" href="#">Perfil</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="/logout">Sair</a>
+          </li>
         </ul>
       </div>
   </nav>
