--- a/templates/login.html
+++ b/templates/login.html
@@ -10,7 +10,7 @@
     <title>Entrar/Registrar-se</title>
 </head>
 <body>
-    <div class="container position-absolute z-3">
+    <div class="position-absolute z-3">
     {% with messages = get_flashed_messages() %}
         {% if messages %}
             <ul id="messages" class="list-unstyled">
